# libAstrallRobot

./: .gitignore  AGENTS.md  CMakeLists.txt  Problem.md  README.md  temp
astrall_core/: CMakeLists.txt
astrall_core/configs/: robot.yaml
astrall_core/examples/: cpp_demo.cpp  python_demo.py
astrall_core/include/astrall/: runtime.hpp
astrall_core/include/astrall/backend/: backend.hpp  backend_factory.hpp  real_backend.hpp  sim_backend.hpp
astrall_core/include/astrall/common/: geometry.hpp  status.hpp
astrall_core/include/astrall/control/: controller.hpp  twist_command_mapper.hpp
astrall_core/include/astrall/device/: camera.hpp  radar.hpp  real_camera.hpp
astrall_core/include/astrall/navigation/: navigator.hpp
astrall_core/include/astrall/planning/: planner.hpp  straight_line_planner.hpp
astrall_core/include/astrall/sdk/: astrall_sdk_wrapper.hpp
astrall_core/lib/astrall_sdk/include/: astrall_sdk.hpp  interface.h
astrall_core/src/: runtime.cpp
astrall_core/src/backend/: backend_factory.cpp  real_backend.cpp  sim_backend.cpp
astrall_core/src/behavior/: state_machine.cpp
astrall_core/src/control/: controller.cpp  twist_command_mapper.cpp
astrall_core/src/device/: dummy_camera.cpp  real_camera.cpp
astrall_core/src/navigation/: navigator.cpp
astrall_core/src/planning/: straight_line_planner.cpp
astrall_core/src/sdk/: astrall_sdk_wrapper.cpp
astrall_core/tests/: smoke_test.py  test_astrall_sdk_wrapper_fake.cpp  test_backend_interface.cpp  test_navigator_status.cpp  test_real_backend_fake_sdk.cpp  test_twist_command_mapper.cpp
astrall_py/: CMakeLists.txt
astrall_py/src/: bind_backend.cpp  bind_behavior.cpp  bind_control.cpp  bind_device.cpp  bind_navigation.cpp
astrall_ros2/: README.md
astrall_ros2/camera_node/: README.md
astrall_ros2/controller_node/: CMakeLists.txt  package.xml
astrall_ros2/controller_node/config/: astrall_base.yaml
astrall_ros2/controller_node/launch/: astrall_base.launch.py
astrall_ros2/controller_node/src/: astrall_base_node.cpp
astrall_ros2/odom_node/: README.md
astrall_ros2/radar_node/: README.md
astrall_ros2/scripts/: check_lidar_udp.sh
astrall_ros2/tf_node/: CMakeLists.txt  package.xml
astrall_ros2/tf_node/config/: sensor_extrinsics.yaml
astrall_ros2/tf_node/launch/: static_transforms.launch.py
bindings/python/: astrall_bindings.cpp  bind_common.cpp  bind_control.cpp  bind_device.cpp  bind_planning.cpp  bind_runtime.cpp
configs/: robot.yaml
docs/: README.de.md  README.fr.md  README.ja.md  README.zh-CN.md  astrall_ros2_architecture.md
examples/: cpp_demo.cpp  python_demo.py
include/astrall/backend/: backend.hpp  sim_backend.hpp
include/astrall/behavior/: state_machine.hpp
include/astrall/common/: geometry.hpp  status.hpp
include/astrall/control/: controller.hpp
include/astrall/device/: camera.hpp  dummy_camera.hpp  dummy_radar.hpp  radar.hpp
include/astrall/navigation/: navigator.hpp
lib/astrall_sdk/: CMakeLists.txt
src/: main.cpp  runtime.cpp
src/backend/: real_backend.cpp  sim_backend.cpp
src/behavior/: state_machine.cpp
src/device/: dummy_radar.cpp
src/navigation/: navigator.cpp
tests/: smoke_test.py
