<?xml version="1.0"?>
<package format="3">
  <name>astrall_description</name>
  <version>0.1.0</version>
  <description>Static frame configuration for Astrall sensors.</description>
  <maintainer email="maintainer@example.com">Astrall Maintainers</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>tf2_ros</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
